--- a/app/src/main/res/drawable/fondo_nuevo.xml
+++ b/app/src/main/res/drawable/fondo_nuevo.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="27dp"/>
-            <solid android:color="#FFE2F7"/>
+            <solid android:color="#FFFFFF"/>
         </shape>
     </item>
 </selector>
