--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
 
     <color name="primary">#DF57C1</color>
     <color name="secondary">#E91E63</color>
+
+    <color name="inicio">#EC1480</color>
+
 </resources>
