--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,8 @@
     <style name="Theme.Prototipo4.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Prototipo4.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="SplashTheme" parent="Theme.Prototipo4">
+        <item name="android:windowBackground">@drawable/splascreen</item>
+    </style>
 </resources>
