--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,30 +18,34 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="140dp"
+            android:layout_width="5dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="130dp"
-                android:layout_height="60dp"
+                android:layout_width="92dp"
+                android:layout_height="match_parent"
                 android:contentDescription="@string/nav_header_desc"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
                 android:scaleType="fitStart"
-                app:srcCompat="@drawable/logo" />
+                app:srcCompat="@drawable/ayuntamiento" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="140dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:gravity="start|right|center_horizontal"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="62dp"
+                android:layout_width="129dp"
+                android:layout_height="155dp"
+                android:layout_marginRight="16dp"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
                 android:scaleType="fitStart"
                 app:srcCompat="@drawable/escudo" />
