--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
+        android:contentDescription="map_button"
         app:backgroundTint="@color/azul"
         app:srcCompat="@drawable/baseline_location_on_24" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
