--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,21 +16,21 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="8dp"
         android:autoSizeTextType="uniform"
-        android:text="Registro de usuario"
+        android:text="Genera tu registro"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintBottom_toTopOf="@+id/et_Soup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/et_Soup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="20dp"
-        android:text="Ingresa los datos del nuevo comensal"
+        android:text="Ingresa tus datos personales"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/cardView4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -193,15 +193,46 @@
                     android:text="Registrar" />
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/tv_noticePriv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="32dp"
+                    android:layout_marginBottom="8dp"
                     android:alpha="0.7"
-                    android:text="¿No conoces tus datos?"
+                    android:text="Aviso de Privacidad"
                     android:textAlignment="center"
                     android:textColor="@color/blue_dif" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_helpReg"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="32dp"
+                        android:layout_weight="1"
+                        android:alpha="0.7"
+                        android:text="¿No conoces tus datos?"
+                        android:textAlignment="center"
+                        android:textColor="@color/purple_200" />
+
+                    <TextView
+                        android:id="@+id/tv_helpSuper"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="32dp"
+                        android:layout_weight="1"
+                        android:alpha="0.7"
+                        android:text="Contacto de Ayuda"
+                        android:textAlignment="center"
+                        android:textColor="@color/purple_200" />
+
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
