--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -26,18 +26,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="64dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="8dp"
                 android:text="Precio de la comida $13"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold|italic"
+                app:layout_constraintBottom_toTopOf="@+id/et_diningStatus"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/et_diningStatus"
