--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -33,7 +33,7 @@
                 android:contentDescription="@string/nav_header_desc"
                 android:paddingTop="@dimen/nav_header_vertical_spacing"
                 android:scaleType="fitStart"
-                app:srcCompat="@drawable/ayuntamiento" />
+                app:srcCompat="@drawable/ayuntamiento1" />
 
         </LinearLayout>
 
